--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,10 +16,11 @@ pydantic = ">=2.0.0"
 python-dotenv = ">=1.0.0"
 openai = ">=1.0.0"
 ollama = "^0.5.3"
+httpx = ">=0.24.0"
+requests = ">=2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
-httpx = ">=0.24.0"
 black = ">=24.1.0"
 ruff = ">=0.4.0"
 pre-commit = ">=3.6.0"
