--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ openai = ">=1.0.0"
 ollama = "^0.5.3"
 httpx = ">=0.24.0"
 requests = ">=2.31.0"
+mcp = ">=1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=7.0.0"
